# labels

./: CHANGELOG  LICENSE  README.md  label.cabal
bench/: Benchmark.hs
src/Label/: Analyse.hs  Base.hs  Codegen.hs  Core.hs  Derive.hs  Monadic.hs  Mono.hs  Partial.hs  Pointwise.hs  Restricted.hs  Simple.hs  Total.hs  Traversing.hs
test/: TestSuite.hs  label-testsuite.cabal
